# FeatMF

./: .gitignore  README.md  README.rst  env_setup.sh  meta.yaml  pyproject.toml  setup_conda.sh
docs/: api.rst  conf.py  developer.rst  index.rst  requirements.txt
docs/api/: ikcm.rst  index.rst  lfdd.rst  utils.rst
docs/source/: conf.py  index.rst
samples/data/: README.rst
src/featmf/: __init__.py  example.py  templates.py  utilities.py
src/featmf/ikcm/: __init__.py  nearest_neighbor.py
src/featmf/lfdd/: __init__.py  sift.py
test/: __init__.py  drawing_funcs.py  ikcm_algos.py  lfdd_algos.py
