[tool.poetry]
name = "featmf"
version = "0.1.0"
description = "A feature matching library"
authors = ["Avneesh Mishra <123avneesh@gmail.com>"]
license = "LGPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
numpy = "~1.21"
opencv-contrib-python = "~4.6.0"
scipy = "~1.7"
matplotlib = "~3.5"
torch = ">= 1.12, < 2.0"
torchvision = ">= 0.13"
torchaudio = ">= 0.12"
pydegensac = "0.1.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">= 5.2"
sphinx-rtd-theme = ">= 1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
